[package]
name = "plasticity"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
crc = "1.8.1"
cached = "0.25.1"
eframe = "0.14.0"
lazy_static = "1.4.0"
rfd = "0.5.1"
roead = { git = "https://github.com/NiceneNerd/roead", rev = "ca0f70c2959110db24c68e72d912f5ff19a6d0d3" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
